--- a/task.html
+++ b/task.html
@@ -1,1 +1,2 @@
 <h1>Hi my name is gowtham,<br>this is my frist github project</h1>
+<p><b>i am currently pursing Bachalor of techonology in computer science</b> </p>
